<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/tool_bar"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_feedback_title"
            android:textSize="25dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_name"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_feedback_name"
            android:capitalize="sentences"
            android:paddingLeft="5dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_feedback_email"
            android:paddingLeft="5dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_ph_no"
            android:maxLength="10"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_feedback_phno"
            android:paddingLeft="5dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:inputType="number"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_loyalty_no"
            android:maxLength="12"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_feedback_loyalty_no"
            android:background="@drawable/et_username"
            android:paddingLeft="5dp"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:inputType="number"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/et_description"
            android:hint="@string/tv_feedback_description"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:gravity="top"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:background="@drawable/et_desc_bg"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btn_feedback_submit"
            android:background="@color/ColorPrimary"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_submit"/>

    </LinearLayout>

    </RelativeLayout>