<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/tool_bar"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_checkout_details_title"
            android:textSize="25dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_checkout_address"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_register_address"
            android:inputType="textCapSentences"
            android:paddingLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_checkout_address_line1"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:inputType="textCapSentences"
            android:hint="@string/tv_register_address_line1"
            android:paddingLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_checkout_address_line2"
            android:inputType="textCapSentences"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_register_address_line2"
            android:paddingLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_checkout_address_line3"
            android:inputType="textCapSentences"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_register_address_line3"
            android:paddingLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_checkout_city"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:inputType="textCapSentences"
            android:hint="@string/tv_register_address_city"
            android:paddingLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_pin_no"
            android:maxLength="10"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_register_address_pinno"
            android:paddingLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:inputType="number"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_checkout_state"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:inputType="textCapSentences"
            android:hint="@string/tv_register_address_state"
            android:paddingLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_checkout_country"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:inputType="textCapSentences"
            android:hint="@string/tv_register_address_country"
            android:paddingLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btn_feedback_submit"
            android:background="@color/ColorPrimary"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_checkout_details_submit"/>

    </LinearLayout>

</RelativeLayout>
