<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/tool_bar"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_profile_title"
            android:textSize="25dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_edit_firstname"
            android:paddingLeft="5dp"
            android:hint="@string/edit_profile_firstname"
            android:inputType="textCapSentences"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_edit_lastname"
            android:paddingLeft="5dp"
            android:inputType="textCapSentences"
            android:hint="@string/edit_profile_lastname"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_edit_email"
            android:paddingLeft="5dp"
            android:hint="@string/edit_profile_email"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_edit_dob"
            android:paddingLeft="5dp"
            android:hint="@string/edit_profile_dob"
            android:focusable="false"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_edit_gender"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:entries="@array/spinner_array"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:id="@+id/et_edit_phone"
            android:hint="@string/edit_profile_phone"
            android:inputType="number"
            android:maxLength="10"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_edit_password"
            android:hint="@string/edit_profile_pwd"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/edit_profile_submit"
            android:background="@color/ColorPrimary"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_edit_profile_submit"/>

    </LinearLayout>

</RelativeLayout>
