<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/tool_bar"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_register_title"
            android:textSize="25dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_name"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_register_name"
            android:inputType="textCapSentences"
            android:paddingLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_last_name"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:inputType="textCapSentences"
            android:hint="@string/tv_register_lastname"
            android:paddingLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_email"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_register_email"
            android:paddingLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_dob"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_register_dob"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:singleLine="true"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_gender"
            android:layout_marginRight="10dp"
            android:entries="@array/spinner_array"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/et_username" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_ph_no"
            android:maxLength="10"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_register_phno"
            android:paddingLeft="10dp"
            android:background="@drawable/et_username"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:inputType="number"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_pwd"
            android:hint="@string/tv_register_pwd"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:background="@drawable/et_username"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_confirm_pwd"
            android:hint="@string/tv_register_confirm_pwd"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:background="@drawable/et_username"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_refer"
            android:capitalize="characters"
            android:hint="@string/tv_register_refer"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:background="@drawable/et_username"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btn_feedback_submit"
            android:background="@color/ColorPrimary"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_newuser_submit"/>

    </LinearLayout>

</RelativeLayout>
