<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:id="@+id/et_forgot_email"
        android:background="@drawable/et_username"
        android:textCursorDrawable="@drawable/edittext_cursor_color"
        android:hint="@string/et_forgot_email_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:weightSum="2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@color/ColorPrimary"
            android:textColor="#FFFFFF"
            android:id="@+id/btn_forgot_ok"
            android:text="@string/btn_forgot_ok"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@color/ColorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/btn_forgot_cancel"
            android:id="@+id/btn_forgot_cancel"/>
    </LinearLayout>
</LinearLayout>
